Revision history for {{ $dist->name }}:

{{$NEXT}}

v0.5.2    2022-04-03 16:30:15+01:00 Europe/London
  [Bug Fixes]
  - Wrap coercions, fixes GH#4.

  [Documentation]
  - Bumped copyright year.

  - Fix encoding of links in README.

  [Other]
  - Removed bad rule from MANIFEST.SKIP.

v0.5.1    2021-06-21 16:47:46+01:00 Europe/London
  [Documentation]
  - Bumped copyright year.

  - Updated SEE ALSO.

v0.5.0    2020-12-30 16:54:53+00:00 Europe/London
  [Enhancements]
  - Added "once" as alternative to "wo" attributes. "wo" is now an
    alias for "once", and is documented as deprecated, GH#3.

v0.4.5    2020-11-21 12:44:03+00:00 Europe/London
  [Documentation]
  - Noted different meaning of "wo" attributes in Class::Accessor.

v0.4.4    2020-07-31 14:44:28+01:00 Europe/London
  [Toolchain]
  - Add core modules in the prerequisites.

v0.4.3    2020-01-10 12:08:40+00:00 Europe/London
  [Documentation]
  - Added a note about using with Moose and Mouse.

  - Added link to Types::Const in KNOWN ISSUES.

  [Tests]
  - Added tests with Moose.

  [Other]
  - Added MooX::TypeTiny and Moose as recommended test modules.

v0.4.2    2020-01-04 12:59:01+00:00 Europe/London
  [Tests]
  - Fix MooX::TypeTiny test to bail out if MooX::TypeTiny missing, #1.

v0.4.1    2020-01-03 18:34:29+00:00 Europe/London
  [Documentation]
  - Bump copyright year.

  [Tests]
  - Add tests with MooX::TypeTiny.

  [Other]
  - Recommend MooX::TypeTiny as prereq.

v0.4.0    2019-11-15 17:54:30+00:00 Europe/London
  [Enhancements]
  - Added "strict" option to only apply read-only constraints in
    strict mode.

v0.3.1    2019-04-02 18:47:14+01:00 Europe/London
  [Other]
  - Removed unnecessary prerequisites.

v0.3.0    2019-04-02 18:35:06+01:00 Europe/London
  [Incompatable Changes]
  - Removed support for Perls before v5.10.1.

  [Documentation]
  - Documented handling of non-existent hash reference keys.

  [Tests]
  - Added more tests.

v0.2.2    2018-12-06 18:00:47+00:00 Europe/London
  [Other]